fix: overflow on x-axis

--- a/style.css
+++ b/style.css
@@ -57,12 +57,12 @@ a {
         display: flex;
         justify-content: center;
         align-items: center;
-        overflow: scroll;
+        overflow-y: scroll;
     }
     main {
         max-width: unset;
-        width: 580px;
-        height: 580px;
+        width: 570px;
+        height: 570px;
         box-shadow: 0px 1px 7px 0px #d0d0d0c2;
         padding: 1em;
         padding-left: 1.3em;
